--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </picture>
         <div class="faq-content">
           <h1>FAQ</h1>
-          <dl class="question-list">
+          <dl class="question-list color-dkgray">
             <div>
               <dt><button aria-controls="question1" aria-expanded="false">How many team members can i invite?</button></dt>
               <dd id="question1">You can invite 12 members to you team.</dd>
             </div>
             <div>
-              <dt><button aria-controls="question2" aria-expanded="false">What is the maximum file upload size?</button></dt>
-              <dd id="question2">No more than 2GB. All files in your account must fit your allotted storage space.</dd>
+              <dt><button aria-controls="question2" aria-expanded="true">What is the maximum file upload size?</button></dt>
+              <dd class="active" id="question2">No more than 2GB. All files in your account must fit your allotted storage space.</dd>
             </div>
             <div>
               <dt><button aria-controls="question3" aria-expanded="false">How i reset my password?</button></dt>
