--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div>
               <dt><button aria-controls="question3" aria-expanded="false">How i reset my password?</button></dt>
-              <dd id="question3">Yes you can.</dd>
+              <dd id="question3">In the login menu, click on forgot my password, and follow the instructions.</dd>
             </div>
             <div>
               <dt><button aria-controls="question4" aria-expanded="false">Can i cancel my subscription?</button></dt>
